# maximumplay

./: .gitignore  CLAUDE.md  pyproject.toml  tmp.json
src/ai-libs/: add_azure_bedrock.py  add_openrouter_fix_pydantic.py  bigquery_installer_analysis.py  classify_existing.py  create_filtered_csv.py  create_summary_viz.py  fix_classifications.py  pypi_classified.csv  pypi_classified_corrected.csv  pypi_classified_final.csv  pypi_downloads_ai_only.csv  pypi_downloads_detailed.csv  pypi_downloads_last_month.csv  pypi_downloads_last_monthv2.csv  pypi_proxy_server.py  pypi_quick_stats.csv  pypistats_api_research.py  python-downloads-dashboard.html  quick_stats.py  stats.py  stats_and_class.py  stats_and_classv2.py  update_max_sglang.py  visualize_classified.R  visualize_local_inference.R  visualize_pypi_stats.R
src/aiprog/: idea.html  idea.qmd
src/attjsplay/: play.ts
src/classydspy/: api_target.html  api_target.qmd  api_target.quarto_ipynb  test_structure.py  walkthrough.html
src/dataanalyticsdemoe/: demo.qmd  demodata.csv
src/musing_on_tools/: chapter1.py  dspy_md_tool_adapter.py  multiTimeline (1).csv  multiTimeline (2).csv  multiTimeline (3).csv  multiTimeline.csv  plotting_mcp_events.R
src/pixelplay/: play.py
src/play_context_engineering/: lyra.md
src/prompt_optimizer/: __init__.py  api_proopt_northstar.py
src/vanilla_dspy/: dspy.md  tuto_o3.md  tuto_opus.md
