[project]
name = "maximumplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attachments>=0.15.0",
    "backoff>=2.2.1",
    "dspy>=2.6.27",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pixeltable>=0.4.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
